--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^3.3.6",
+    "mongodb": "^4.11.0",
     "next": "13.0.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
