--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db": "tsc scripts/index.ts && node scripts/index.js"
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^3.3.6",
@@ -24,6 +25,7 @@
     "@types/react": "18.0.23",
     "@types/react-dom": "18.0.7",
     "@types/styled-components": "^5.1.26",
+    "dotenv": "^16.0.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "typescript": "4.8.4"
