--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
-    "@types/node": "18.11.5",
+    "@types/node": "^18.11.7",
     "@types/react": "18.0.23",
     "@types/react-dom": "18.0.7",
     "@types/styled-components": "^5.1.26",
