--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^3.3.6",
+    "dompurify": "^2.4.0",
     "mongodb": "^4.11.0",
     "next": "13.0.0",
     "next-pwa": "^5.6.0",
@@ -20,6 +21,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/dompurify": "^2.3.4",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.7",
     "@types/react": "18.0.23",
