--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fingerprintjs/fingerprintjs": "^3.3.6",
     "dompurify": "^2.4.0",
     "mongodb": "^4.11.0",
-    "next": "13.0.0",
+    "next": "^13.1.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,12 +24,12 @@
     "@types/dompurify": "^2.3.4",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.7",
-    "@types/react": "18.0.23",
-    "@types/react-dom": "18.0.7",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "dotenv": "^16.0.3",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
-    "typescript": "4.8.4"
+    "eslint": "^8.30.0",
+    "eslint-config-next": "^13.1.1",
+    "typescript": "^4.9.4"
   }
 }
